--- a/bonus/bonus.html
+++ b/bonus/bonus.html
@@ -104,11 +104,11 @@
 
             <!-- second block -->
 
-            <div class="row">
+            <div class="row top-col">
 
                 <div class="col-6 bigblue"></div>
 
-                <div class="col-6 blue top-col">
+                <div class="col-6 blue  ">
 
                     <div class="text-col">
                         Start
@@ -118,22 +118,25 @@
 
             </div>
 
-            <div class="row">
+            <div class="row middle-col">
 
                 <div class="col-6 bigblue"></div>
 
-                <div class="col-6 blue middle-col">
+                <div class="col-6 blue ">
 
-            
+                    <div class="text-col">
+                        Middle
+                    </div>
+
                 </div>
 
             </div>
 
-            <div class="row">
+            <div class="row bottom-col">
 
                 <div class="col-6 bigblue"></div>
 
-                <div class="col-6 blue bottom-col">
+                <div class="col-6 blue ">
 
                     <div class="text-col">
                         Bottom
@@ -147,7 +150,47 @@
 
         <!-- justify content -->
         <section>
-            
+            <!-- main title -->
+            <h2>Justify content</h2>
+
+            <!-- title -->
+            <h3>Space around</h3>
+
+            <div class="row">
+
+                <div class="col-12 blue">
+
+                    <div class="row nested around-col">
+
+                        <div class="col-2 green"></div>
+                        <div class="col-2 green"></div>
+                        <div class="col-2 green"></div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            <!-- title -->
+            <h3>Space between</h3>
+
+            <div class="row">
+
+                <div class="col-12 blue">
+
+                    <div class="row nested between-col">
+
+                        <div class="col-2 green"></div>
+                        <div class="col-2 green"></div>
+                        <div class="col-2 green"></div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
         </section>
 
     </div>
